--- a/jagex.css
+++ b/jagex.css
@@ -1,5 +1,5 @@
 /* Imports */
-@import url("http://pastebin.com/raw/bx2h8SZw");
+@import url("https://neverpause.github.io/paws.css");
 @import url("https://hebgbs.github.io/rainbowstuff.css"); /* Rainbow sliders */
 @import url("https://github.netux.ml/css/chatright.css"); /* Chat completly to the right */
 @import url("https://github.netux.ml/css/videosmall.css"); /* Small video */
