--- a/neverpause.css
+++ b/neverpause.css
@@ -3,4 +3,4 @@
 #chat .chat-container .chat-messages .chat-main li {
 	line-height: inherit !important;
 }
-.browser-content { margin-left:20px; }
+.browser-content { margin-left:20px !important; }
