--- a/Never.css
+++ b/Never.css
@@ -8,3 +8,25 @@
     color: #ffa500 !important;
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
+#chat .chat-container ul.chat-main li.user-56c057eaa23bb71d0001ac91 .stream-item-content .activity-row .username:before /* tinyandkawaii */{
+    background-image: url(https/failchon.github.io/OWP.png);
+    background-size: 17px 17px;
+    background-repeat: no-repeat;
+    display:inline-block;
+    width: 18px;
+    height: 14px;
+    content: "";
+}
+#chat .chat-container ul.chat-main li.user-56d545a245f02ad6041a4317 .stream-item-content .activity-row .username:before {
+    content: "\f191";
+    font-family: "foundation-icons";
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    text-decoration: inherit;
+    margin-right: 5px;
+}
