--- a/Never.css
+++ b/Never.css
@@ -10,7 +10,7 @@
 }
 .browser-content { margin-left:20px !important; }
 #chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735  .stream-item-content .activity-row .username /* laquett */ {
-    color: "https://colrd.com/inc/css/images/layout/bg-spectrum.jpg" !important;
+    color: #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000 !important;
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
 #chat .chat-container ul.chat-main li.user-56d545a245f02ad6041a4317 .stream-item-content .activity-row .username:before {
