--- a/Never.css
+++ b/Never.css
@@ -8,10 +8,17 @@
     color: #ffa500 !important;
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
-.browser-content { margin-left:20px !important; }
-#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735  .stream-item-content .activity-row .username /* laquett */ {
-    color: #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000 !important;
-    text-shadow: 0px 0px 1px rgba(0,0,0,.5);
+/* laquett rainbow */
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username {
+    background: linear-gradient(to right, #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000);
+    -webkit-background-clip: text;
+    text-shadow: 1px 1px 0 rgba(255,255,255,.25);
+    color: transparent;
+    width: 3.6rem;
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username .user-role {
+    width: calc(100% - 8.5rem);
+}
 }
 .browser-content { margin-left:20px !important; }
 #chat .chat-container ul.chat-main li.user-570cbe9621ef015e006f9c96  .stream-item-content .activity-row .username /* Theharemking */ {
