--- a/Never.css
+++ b/Never.css
@@ -8,7 +8,46 @@
     color: #ffa500 !important;
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
-#chat .chat-container ul.chat-main li.user-56c057eaa23bb71d0001ac91 .stream-item-content .activity-row .username:before {
+/* laquett rainbow */
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username {
+    background: linear-gradient(to right, #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000);
+    -webkit-background-clip: text;
+    text-shadow: 1px 1px 0 rgba(255,255,255,.25);
+    color: transparent;
+    width: 3.6rem;
+    margin-left: 1rem;
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username .user-role {
+    width: calc(100% - 11rem);
+    position: absolute;
+    top: 1.2rem;
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .activity-row .username .user-role-icon {
+	background-image: url("http://i.imgur.com/lQKmbHD.png");
+	display: inline-block;
+    position: absolute;
+    left: 4.5rem;
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735.currentDJ .stream-item-content .activity-row .username {
+ 	margin-left: 2rem;   
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735.currentDJ .stream-item-content .activity-row .username::before {
+ 	position: absolute;
+    left: 4.5rem;
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735.currentDJ .stream-item-content .activity-row .username .user-role {
+    width: calc(100% - 12.5rem);
+}
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735.currentDJ .activity-row .username .user-role-icon {
+ 	left: 5.5rem;   
+}
+
+.browser-content { margin-left:20px !important; }
+#chat .chat-container ul.chat-main li.user-570cbe9621ef015e006f9c96  .stream-item-content .activity-row .username /* Theharemking */ {
+    color: #37751f !important;
+    text-shadow: 0px 0px 1px rgba(0,0,0,.5);
+}
+#chat .chat-container ul.chat-main li.user-56d545a245f02ad6041a4317 .stream-item-content .activity-row .username:before {
     content: "\f192";
     font-family: "foundation-icons";
     font-style: normal;
@@ -21,28 +60,7 @@
     text-decoration: inherit;
     margin-right: 5px;
 }
-#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username /* laquett rainbow */ {
-    background: linear-gradient(to right, #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000);
-    -webkit-background-clip: text;
-    text-shadow: 1px 1px 0 rgba(255,255,255,.25);
-    color: transparent;
-    width: 3.6rem;
-}
-#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username .user-role {
-    width: calc(100% - 8.5rem);
-    position: absolute;
-    top: 1.2rem; 
-} 
-#chat .chat-container .chat-messages .chat-main li.user-560a8df0b776b203001e6735 .activity-row .username .user-role-icon {
-	background-image: url("http://i.imgur.com/lQKmbHD.png");
-	display: inline-block;
-}
-.browser-content { margin-left:20px !important; }
-#chat .chat-container ul.chat-main li.user-570cbe9621ef015e006f9c96  .stream-item-content .activity-row .username /* Theharemking */ {
-    color: #37751f !important;
-    text-shadow: 0px 0px 1px rgba(0,0,0,.5);
-}
-#chat .chat-container ul.chat-main li.user-56d545a245f02ad6041a4317 .stream-item-content .activity-row .username:before {
+#chat .chat-container ul.chat-main li.user-56c057eaa23bb71d0001ac91 .stream-item-content .activity-row .username:before {
     content: "\f192";
     font-family: "foundation-icons";
     font-style: normal;
