--- a/Never.css
+++ b/Never.css
@@ -8,8 +8,7 @@
     color: #ffa500 !important;
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
-/* laquett rainbow */
-#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username {
+#chat .chat-container ul.chat-main li.user-560a8df0b776b203001e6735 .stream-item-content .activity-row .username /* laquett rainbow */ {
     background: linear-gradient(to right, #9400D3, #4B0082, #0000FF, #00FF00, #FFFF00, #FF7F00, #FF0000);
     -webkit-background-clip: text;
     text-shadow: 1px 1px 0 rgba(255,255,255,.25);
@@ -61,7 +60,7 @@
     margin-right: 5px;
 }
 #chat .chat-container ul.chat-main li.user-56c057eaa23bb71d0001ac91 .stream-item-content .activity-row .username:before {
-    content: "\f192";
+    content: "http://i.imgur.com/NfHzvAR.png";
     font-family: "foundation-icons";
     font-style: normal;
     font-weight: normal;
