--- a/Never.css
+++ b/Never.css
@@ -60,7 +60,7 @@
     margin-right: 5px;
 }
 #chat .chat-container ul.chat-main li.user-56c057eaa23bb71d0001ac91 .stream-item-content .activity-row .username:before {
-    content: "http://i.imgur.com/NfHzvAR.png";
+    content: "https://i.imgur.com/I0XECbX.jpg";
     font-family: "foundation-icons";
     font-style: normal;
     font-weight: normal;
