--- a/Never.css
+++ b/Never.css
@@ -9,7 +9,7 @@
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
 #chat .chat-container ul.chat-main li.user-56c057eaa23bb71d0001ac91 .stream-item-content .activity-row .username:before {
-    content: U+1F4A5 ; 
+    content: "\01F4A5" ; 
     font-family: "foundation-icons";
     font-style: normal;
     font-weight: normal;
