--- a/Never.css
+++ b/Never.css
@@ -81,4 +81,19 @@
 .browser-content { margin-left:20px !important; }
 #chat .chat-container ul.chat-main li.user-562fb1ae319ea12d00ebc064  .stream-item-content .activity-row .username  {
     color: #EEB422 !important;
-    text-shadow: 0px 0px 1px rgba(0,0,0,.5); 
+    text-shadow: 0px 0px 1px rgba(0,0,0,.5);
+}
+#chat .chat-container ul.chat-main li.user-562fb1ae319ea12d00ebc064 .stream-item-content .activity-row .username:before {
+    content: "http://i.imgur.com/ZHCxd31.png" ; 
+    font-family: "foundation-icons";
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    display: inline-block;
+    text-decoration: inherit;
+    margin-right: 5px;
+}
+/* Zogical end */
