--- a/Never.css
+++ b/Never.css
@@ -83,17 +83,14 @@
     color: #EEB422 !important;
     text-shadow: 0px 0px 1px rgba(0,0,0,.5);
 }
-#chat .chat-container ul.chat-main li.user-562fb1ae319ea12d00ebc064 .stream-item-content .activity-row .username:before {
-    content: url("") ; 
-    font-family: "foundation-icons";
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    text-decoration: inherit;
+#chat .chat-container ul.chat-main li.user-562fb1ae319ea12d00ebc064 .stream-item-content .activity-row .username:before /* Zogical */{
+    background-image: url(https://i.imgur.com/ZHCxd31.png);
+    background-size: 17px 17px;
+   
+    display:inline-block;
+    width: 17px;
+    height: 17px;
+    content: "";
     margin-right: 5px;
 }
 /* Zogical end */
