--- a/Never.css
+++ b/Never.css
@@ -1,4 +1,5 @@
 @import url("https://ajmrly.github.io/stylesheets/lettucetrackretro.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css");
 
 #chat .chat-container .chat-messages .chat-main li {
 	line-height: inherit !important;
